infra/modules/redshift/security.tf
resource "aws_security_group" "redshift_sg" {
  name        = "redshift-serverless-sg"
  description = "Security group for Redshift Serverless"
  vpc_id      = aws_vpc.this.id

  ingress {
    from_port   = 5439
    to_port     = 5439
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidrs
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
